# miniWiki

./: .gitignore  Gemfile  README.lyx  README.md  _config.yml
ALGORITHMS/: CFD.lyx  COMPUTATIONAL_FLUID_DYNAMICS.lyx  FEM.lyx  INTERPOLATION.lyx  OPTIMIZATION.lyx  QUADRATURE.lyx
Algorithm/: FiniteDifference.lyx
Algorithms/: CFD.lyx  FiniteDifference.lyx  FiniteElement.lyx  GaussianQuadrature.lyx  HermiteInterpolation.lyx  LagrangeInterpolation.lyx  NumericalAlgorithms.lyx  NumericalAnalysis.lyx  Optimization.lyx  UpwindSchemes.lyx
COMPUTATION/: COMPUTATIONAL_FLUID_DYNAMICS.lyx
Kits/: SSH.md
MATHEMATICS/: DIFFERENTIAL_GEOMETRY.lyx  PDE.lyx
Math/: GreensFunctions.lyx  SeparationOfVariables.lyx  SpecialFunctions.lyx
Mathematics/: ComplexAnalysis.lyx  DifferentialEquations.lyx  DifferentialGeometry.lyx  GreensFunctions.lyx  IntegralTransforms.lyx  SpecialFunctions.lyx
PHYSICS/: FLUID_MECHANICS.lyx
PROGRAMMING/: PYTHON.md  Python.md
Physics/: FluidEquations.lyx  FluidMechanics.lyx  Thermodynamics.lyx
TOOLS/: GIT.md  GMSH.md  Git.md  Gmsh.md  Octave.md  VTK.md  Vim.md
Tools/: BookMarkers.md  Markdown.md
algorithms/: CFD.lyx  FEM.lyx  FiniteElement.lyx  Interpolation.lyx  Optimization.lyx  QUADRATURE.lyx  Quadrature.lyx  README.md  finite_difference.lyx  finite_element.lyx  interpolation.lyx  quadrature.lyx
documenting/: README.md  bookmark.md  doxygen.md  markdown.md
mathematics/: ComplexAnalysis.lyx  (+16 more)
programming/mesh/vtk/: CMakeLists.txt  README.md  legacy_vtk_format.md  write.py
programming/parallel/mpi/: CMakeLists.txt  hello.c  hello.cpp
(+887 files in other folders)
