cmake_minimum_required(VERSION 3.0)
project(MPIDEMO)
set(CMAKE_CXX_STANDARD 17)

find_package(MPI REQUIRED)
if (MPI_CXX_FOUND)
  message("MPI_C_INCLUDE_PATH = ${MPI_C_INCLUDE_PATH}")
  message("MPI_C_LIBRARIES = ${MPI_C_LIBRARIES}")
  message("MPI_CXX_INCLUDE_PATH = ${MPI_CXX_INCLUDE_PATH}")
  message("MPI_CXX_LIBRARIES = ${MPI_CXX_LIBRARIES}")
  message("MPIEXEC_EXECUTABLE = ${MPIEXEC_EXECUTABLE}")
else (MPI_CXX_FOUND)
  message(SEND_ERROR "This project depends on MPI.")
endif (MPI_CXX_FOUND)

include_directories(${MPI_C_INCLUDE_PATH})
link_libraries(${MPI_mpi_LIBRARY})
add_executable(hello_in_c hello.c)
add_executable(hello_in_cpp hello.cpp)
add_executable(cycle cycle.c)
